<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/nombre" />

    <TextView
        android:id="@+id/errorNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_incorrecto"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:visibility="gone"
        />


    <EditText
        android:id="@+id/editTextFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/fecha_de_nacimiento" />
    <TextView
        android:id="@+id/errorFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_nacimiento_incorrecta"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:visibility="gone"
        />

    <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:entries="@array/genders"

        />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="26sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/n_mero_telef_nico" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:textSize="26sp"
        android:hint="@string/correo_electr_nico" />
    <TextView
        android:id="@+id/errorCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_incorrecto"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="26sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/contrase_a" />
    <TextView
        android:id="@+id/errorContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constrase_a_inv_lida"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/editTextRepetirContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="26sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:hint="@string/repetir_contrase_a" />
    <TextView
        android:id="@+id/errorRepetirContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_contrase_as_no_coinciden"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/registrar"
            android:layout_marginLeft="30sp"/>
        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/limpiar"
            android:layout_marginLeft="30sp"/>
    </LinearLayout>


</LinearLayout>